--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,24 @@
 version: '3.8'
 
 services:
+  api:
+    build: ./minibank-api
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
+
+  # frontend:
+  #   build: ./minibank-web
+  #   ports:
+  #     - "5173:5173"
+  #   command: npm run dev
+  #   volumes:
+  #     - ./minibank-web:/app
+  #   working_dir: /app
+
   db:
     image: postgres
-    container_name: db
-    restart: always
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: test
